RESOLVED FIXED277576
[JSC] Fix speculation for JSMap/SetIterator in DFG and FTL
https://bugs.webkit.org/show_bug.cgi?id=277576
Summary [JSC] Fix speculation for JSMap/SetIterator in DFG and FTL
Yijia Huang
Reported 2024-08-02 17:18:25 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-02 17:18:40 PDT
Yijia Huang
Comment 2 2024-08-02 17:21:56 PDT
Alexey Shvayka
Comment 3 2024-08-02 17:44:04 PDT
*** Bug 277560 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2024-08-03 13:52:50 PDT
Committed 281810@main (959410e0ccfa): <https://commits.webkit.org/281810@main> Reviewed commits have been landed. Closing PR #31675 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.