[JSC] Fix speculation for JSMap/SetIterator in DFG and FTL https://bugs.webkit.org/show_bug.cgi?id=277576 rdar://133097257

Reviewed by Alexey Shvayka and Yusuke Suzuki.

The speculation of speculateMap(Set)IteratorObject is
definitely wrong. This patch fix all speculations for
JSMap/SetIterator in DFG and FTL.

* Source/JavaScriptCore/bytecode/SpeculatedType.cpp:
(JSC::speculationFromJSType):
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):

Canonical link: https://commits.webkit.org/281810@main